# godot-addon-manager

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: cli.rs  config.rs  error.rs  git.rs  main.rs  plugin.rs  utils.rs
src/commands/: cache.rs  init.rs  install.rs  list.rs  mod.rs  uninstall.rs  upgrade.rs  version.rs
website/: book.toml
website/src/: SUMMARY.md  configuration.md  introduction.md
website/src/commands/: cache.md  init.md  install.md  list.md  uninstall.md  upgrade.md  version.md
