[package]
name = "godot-addon-manager"
version = "1.0.1"
edition = "2024"
description = "A package manager for Godot addons"
license = "MIT"
repository = "https://github.com/moonrailgun/godot-addon-manager"
keywords = ["godot", "addon", "package-manager", "gamedev"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gdam"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

[package.metadata.release]
publish = false
